# ygOS

./: .gitignore  CMakeLists.txt  README.md  ReleaseNote.md
app/platform/linux/: main.c
app/platform/stm32/: cmd_test.c  fat32_test.c  list.c  list_test.c  malloc_test.c  proc_test.c  sem_queue.c  sem_test.c  syscall_test.c
app/ygsh/: cmd.h  cmd_cat.c  cmd_echo.c
doc/: device_manage.md  file_manage.md  memory_manage.md  signal.md  task_ipc.md  task_manage.md
doc/resource/: gdb_command.md
project/: minios.uvoptx  ygos.uvguix.Administrator  ygos.uvoptx  ygos.uvprojx
project-mdk-sim/: minios.uvguix.yangang  ygos.uvguix.Administrator  ygos.uvguix.yangang  ygos.uvoptx  ygos.uvprojx
project-stm32f4discovery/: project.uvguix.Administrator  project.uvoptx  project.uvprojx
project/project-mdk-sim/: minios.uvguix.Administrator  ygos.uvguix.Administrator  ygos.uvguix.yangang  ygos.uvoptx  ygos.uvprojx
project/project-stm32f4discovery/: project.uvguix.Administrator  project.uvoptx  project.uvprojx
sample/: fat32_test.c  main.c  proc_test.c  sem_test.c  syscall_test.c  systick.c  systick.h
sample/mdk_sim/: systick.c  systick.h
src/: core.c  fs.h  fs_add_inode.c  fs_call.c  fs_driver.c  idle.c  inode.h  list.h  queue.h  rtos.h  sem.c  sleep.c  switch.c  swtich.c
src/driver/: ramlog.c  ramlog.h
src/fs/: fcntl.h  fs.h  fs_add_inode.c  fs_call.c  fs_driver.c  fs_mount.c  fs_syscall.c  procfs.h  stdio.h
src/include/: debug.h  queue.h
src/ipc/: sem.c
src/kernel/: core.c  idle.c  signal.c  sleep.c  switch_armcc.c  switch_gcc.S
src/mm/: mallo.c  malloc.c
(+99 files in other folders)
